--- a/package.json
+++ b/package.json
@@ -6,6 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "own-cli": "index.js"
+  },
   "author": "zsh",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chalk": "^2.4.2",
+    "cli-table": "^0.3.1",
+    "commander": "^3.0.0",
+    "download-git-repo": "^2.0.0",
+    "inquirer": "^6.5.0",
+    "ora": "^3.4.0",
+    "request": "^2.88.0",
+    "handlebars": "^4.0.12",
+    "log-symbols": "^2.2.0"
+  }
 }
